src/objects/Disbursal__c.object
<CustomObject>
    <fields>
        <fullName>Adjustments__c</fullName>
        <description>The adjustments field tracks any changes in the disbursal&apos;s amount due to changes in the requested loan amount.</description>
        <inlineHelpText>The adjustments field tracks any changes in the disbursal&apos;s amount due to changes in the requested loan amount.</inlineHelpText>
        <label>Adjustments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Disbursal Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Date__c</fullName>
        <label>Anticipated Disbursal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Disbursal_Date_Contract__c</fullName>
        <description>Anticipated disbursal date for contract signature</description>
        <formula>if( Disbursal_Sequence__c =1,Loan__r.Loan_Origination_Date__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Reference to Origination Date in Loan</inlineHelpText>
        <label>Anticipated Disbursal Date_Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Disbursal_Date_Mechanical__c</fullName>
        <description>Anticipated Disbursal Date for Mechanical Completion - populated via workflow after Installer reports system as operating with webform.</description>
        <inlineHelpText>Anticipated Disbursal Date for Mechanical Completion - populated via workflow after Installer reports system as operating with webform.</inlineHelpText>
        <label>Anticipated Disbursal Date_Mechanical</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Used in email template</description>
        <formula>Loan__r.Opportunity__r.Concatenated_Billing_Address__c</formula>
        <inlineHelpText>Used in email template</inlineHelpText>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Disbursal__c</fullName>
        <label>Date of Disbursal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_FBO_Funding__c</fullName>
        <description>This field designates when the FBO Funded checkbox got set to TRUE</description>
        <inlineHelpText>This field designates when the FBO Funded checkbox got set to TRUE</inlineHelpText>
        <label>Date of FBO Funding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Disbursal_to_Installer_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Disbursal to Installer Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursal_Method__c</fullName>
        <description>Selection of disbursal method</description>
        <inlineHelpText>SELECTING AN OPTION HERE WILL TRIGGER A DISBURSAL EMAIL AND SET THE STATUS TO COMPLETE</inlineHelpText>
        <label>Disbursal Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disbursal_Percentage__c</fullName>
        <label>Disbursal Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disbursal_Sequence__c</fullName>
        <label>Disbursal Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electronic_Disbursal_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic Disbursal Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funds_in_FBO_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox designates that funds have been disbursed and are currently in the account BlueWave uses to fund partners. It is normally checked by the financial institution providing capital for the respective loan. It gets unchecked once the funds leave.</description>
        <inlineHelpText>This checkbox designates that funds have been disbursed and are currently in the account BlueWave uses to fund partners. It is normally checked by the financial institution providing capital for the respective loan. It gets unchecked once the funds leave.</inlineHelpText>
        <label>Funds in FBO Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_on_Disbursal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold on Disbursal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lender_of_Record__c</fullName>
        <formula>TEXT(Loan__r.Product__r.Lender_of_Record__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender of Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Disbursals</relationshipLabel>
        <relationshipName>Disbursals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Email__c</fullName>
        <inlineHelpText>populated via process builder</inlineHelpText>
        <label>Opportunity Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_id__c</fullName>
        <description>Used in email templates</description>
        <formula>Loan__r.Opportunity__r.Id</formula>
        <inlineHelpText>Used in email templates</inlineHelpText>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Additional_Email_2_of_2__c</fullName>
        <inlineHelpText>populated via process builder</inlineHelpText>
        <label>Partner Additional Email (2 of 2)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Additional_Email__c</fullName>
        <inlineHelpText>populated via process builder</inlineHelpText>
        <label>Partner Additional Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <inlineHelpText>populated via process builder</inlineHelpText>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <referenceTo>Partner__c</referenceTo>
        <relationshipLabel>Disbursals</relationshipLabel>
        <relationshipName>Disbursals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Hold__c</fullName>
        <label>Reason for Hold</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the relationship to the Sales Team object</description>
        <label>Sales Representative</label>
        <referenceTo>BSST__c</referenceTo>
        <relationshipLabel>Disbursals</relationshipLabel>
        <relationshipName>Disbursals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson_Email__c</fullName>
        <description>populated via workflow when IX form reminder email is sent</description>
        <inlineHelpText>populated via workflow when IX form reminder email is sent</inlineHelpText>
        <label>Salesperson Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status_Before_Hold__c</fullName>
        <description>The Status before the disbursal went to hold. This is the status that gets set when the user unchecks the Hold on Disbursal checkbox.</description>
        <inlineHelpText>The Status before the disbursal went to hold. This is the status that gets set when the user unchecks the Hold on Disbursal checkbox.</inlineHelpText>
        <label>Status Before Hold</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This status field marks what stage the disbursal is in the disbursal process. It also marks disbursal as ready for disbursement, which plays a major role in determining which disbursal records show up in the Daily Disbursal reports for BlueWave and Avidia.</description>
        <inlineHelpText>This status field marks what stage the disbursal is in the disbursal process. It also marks disbursal as ready for disbursement, which plays a major role in determining which disbursal records show up in the Daily Disbursal reports for BlueWave and Avidi</inlineHelpText>
        <label>Disbursal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Ready for Disbursement</fullName>
                </value>
                <value>
                    <fullName>Disbursed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Ready for FBO Funding</fullName>
                </value>
                <value>
                    <fullName>Due</fullName>
                </value>
                <value>
                    <fullName>Reimbursed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <isActive>false</isActive>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Not yet disbursed</fullName>
                    <isActive>false</isActive>
                    <label>Not yet disbursed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Disbursal</label>
    <nameField>
        <label>Disbursal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disbursals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>